<?xml version="1.0" encoding="utf-8"?>
<!--***************************************************************************
 *  Droid of Life, an open source Android game based on Conway's Game of Life *
 *  Copyright (C) 2012  Christian Ulrich <chrulri@gmail.com>                  *
 *                                                                            *
 *  This program is free software: you can redistribute it and/or modify      *
 *  it under the terms of the GNU General Public License as published by      *
 *  the Free Software Foundation, either version 3 of the License, or         *
 *  (at your option) any later version.                                       *
 *                                                                            *
 *  This program is distributed in the hope that it will be useful,           *
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of            *
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the             *
 *  GNU General Public License for more details.                              *
 *                                                                            *
 *  You should have received a copy of the GNU General Public License         *
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.     *
 ***************************************************************************-->
<resources>
    <string name="app_name">Droid of Life</string>
    <string name="auto_short">AUTO</string>
    <string name="automatic">Automatic</string>
    <string name="restart">Restart</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About Droid of Life</string>
    <string name="show_deathbirth_title">Death &amp; Birth</string>
    <string name="show_deathbirth_summary">Show death and birth of cells</string>
    <string name="about_info"><![CDATA[Droid of Life v%s<br/>
        <a href="http://github.com/chrulri/droidoflife">github.com/chrulri/droidoflife</a>]]></string>
    <string name="about_legal"><![CDATA[Droid of Life, an open source Android game based on <a href="http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway\'s Game of Life</a><br/>
Copyright &#169; 2012  Christian Ulrich &lt;<a href="mailto:chrulri@gmail.com">chrulri@gmail.com</a>&gt;<br/>
<br/>
This program is free software: you can redistribute it and/or modify<br/>
it under the terms of the GNU General Public License as published by<br/>
the Free Software Foundation, either version 3 of the License, or<br/>
(at your option) any later version.<br/>
<br/>
This program is distributed in the hope that it will be useful,<br/>
but WITHOUT ANY WARRANTY; without even the implied warranty of<br/>
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br/>
GNU General Public License for more details.<br/>
<br/>
You should have received a copy of the GNU General Public License<br/>
along with this program.  If not, see &lt;<a href="http://www.gnu.org/licenses/">www.gnu.org/licenses</a>&gt;.]]></string>
</resources>