<?xml version="1.0" encoding="utf-8"?>
<!--***************************************************************************
 *  Droid of Life, an open source Android game based on Conway's Game of Life *
 *  Copyright (C) 2012  Christian Ulrich <chrulri@gmail.com>                  *
 *                                                                            *
 *  This program is free software: you can redistribute it and/or modify      *
 *  it under the terms of the GNU General Public License as published by      *
 *  the Free Software Foundation, either version 3 of the License, or         *
 *  (at your option) any later version.                                       *
 *                                                                            *
 *  This program is distributed in the hope that it will be useful,           *
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of            *
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the             *
 *  GNU General Public License for more details.                              *
 *                                                                            *
 *  You should have received a copy of the GNU General Public License         *
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.     *
 ***************************************************************************-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mi_automatic"
        android:title="@string/automatic"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"/>
    
    <item
        android:id="@+id/mi_restart"
        android:title="@string/restart"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="always"/>

    <item
        android:id="@+id/mi_help"
        android:title="@string/help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/mi_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_preferences"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/mi_about"
        android:title="@string/about"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="never"/>
    
</menu>